--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>Simple Calculator</h1>
+<div class="calculator">
+    <input type="text" id="display" disabled>
+    <div class="buttons">
         <button onclick="clearDisplay()">C</button>
         <button onclick="appendValue('/')">÷</button>
         <button onclick="appendValue('*')">×</button>
@@ -26,8 +28,8 @@
         <button onclick="appendValue('2')">2</button>
         <button onclick="appendValue('3')">3</button>
         <button onclick="appendValue('0')" class="zero">0</button>
-
-
+    </div>
+</div>
 
     
 </body>
