--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
 </div>
 
-    
+<script src="https://cdn.jsdelivr.net/npm/mathjs@11/lib/browser/math.js"></script>
+<script src="script.js"></script>   
 </body>
 </html>
